ingress/rules/productivity/gitea/ingress-gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-external
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 3080
    targetPort: 3080

---

apiVersion: v1
kind: Endpoints
metadata:
  name: gitea-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.0.2
    ports:
      - port: 3080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitea
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # Change to HTTPS if required
spec:
  ingressClassName: nginx
  rules:
  - host: git.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-external
            port:
              number: 3080
  tls:
  - hosts:
    - git.domain.com
    secretName: gitea-tls
